--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                                 <button class="bg-orange login-btn py-1 px-3 font-size-15"><a href="#">Login</a></button>
                             </div>
                             <div class="ml-4">
-                                <i class="text-white font-size-15  fa fa-university ml-2"> </i>
+                                <img width="25px" src="./assets/images/bank.png" alt="bank">
                             </div>
                         </div>
                            </div>
@@ -144,31 +144,31 @@
                                 <p class="m-0 font-size-20 font-weight-bold">Country</p>
                             </div>
                         <div class="d-flex flex-wrap justify-content-center px-3">
-                            <div class="bg-orange rounded m-2">
+                            <div class="bg-orange bordeRounded m-2">
                                 <p class="m-0 px-3 py-2 font-size-15 text-white">American</p>
                             </div>
-                            <div class="border-orange rounded m-2 ">
+                            <div class="border-orange bordeRounded m-2 ">
                                 <p class="orange-text m-0 px-3 py-2 font-size-15">BALANCED MEALS</p>
                             </div>
-                            <div class="border-orange rounded m-2 ">
+                            <div class="border-orange bordeRounded m-2 ">
                                 <p class="orange-text m-0 px-3 py-2 font-size-15">CHINES</p>
                             </div>
-                            <div class="border-orange rounded m-2 ">
+                            <div class="border-orange bordeRounded m-2 ">
                                 <p class="orange-text m-0 px-3 py-2 font-size-15">INDIAN</p>
                             </div>
-                            <div class="border-orange rounded m-2 ">
+                            <div class="border-orange bordeRounded m-2 ">
                                 <p class="orange-text m-0 px-3 py-2 font-size-15">MEDITERRANEAN</p>
                             </div>
-                            <div class="border-orange rounded m-2 ">
+                            <div class="border-orange bordeRounded m-2 ">
                                 <p class="orange-text m-0 px-3 py-2 font-size-15">MEXICAN</p>
                             </div>
-                            <div class="border-orange rounded m-2 ">
+                            <div class="border-orange bordeRounded m-2 ">
                                 <p class="orange-text m-0 px-3 py-2 font-size-15">PAKISTAN</p>
                             </div>
-                            <div class="border-orange rounded m-2 ">
+                            <div class="border-orange bordeRounded m-2 ">
                                 <p class="orange-text m-0 px-3 py-2 font-size-15">ITALIAN</p>
                             </div>
-                            <div class="border-orange rounded m-2 ">
+                            <div class="border-orange bordeRounded m-2 ">
                                 <p class="orange-text m-0 px-3 py-2 font-size-15">THAI</p>
                             </div>
                         </div>
@@ -177,34 +177,34 @@
                             <p class="m-0 font-size-20 font-weight-bold py-3">Category</p>
                         </div>
                     <div class="d-flex flex-wrap justify-content-center px-3">
-                        <div class="bg-orange rounded m-2">
+                        <div class="bg-orange bordeRounded m-2">
                             <p class="m-0 px-3 py-2 text-white font-size-15">DAIRY FREE</p>
                         </div>
-                        <div class="border-orange rounded m-2 ">
+                        <div class="border-orange bordeRounded m-2 ">
                             <p class="orange-text m-0 px-3 py-2 font-size-15">DESSERTS</p>
                         </div>
-                        <div class="border-orange rounded m-2 ">
+                        <div class="border-orange bordeRounded m-2 ">
                             <p class="orange-text m-0 px-3 py-2 font-size-15">DIABETIC FRIENDLY</p>
                         </div>
-                        <div class="border-orange rounded m-2 ">
+                        <div class="border-orange bordeRounded m-2 ">
                             <p class="orange-text m-0 px-3 py-2 font-size-15">GLUTEN FREE</p>
                         </div>
-                        <div class="border-orange rounded m-2 ">
+                        <div class="border-orange bordeRounded m-2 ">
                             <p class="orange-text m-0 px-3 py-2font-size-15">KETO</p>
                         </div>
-                        <div class="border-orange rounded m-2 ">
+                        <div class="border-orange bordeRounded m-2 ">
                             <p class="orange-text m-0 px-3 py-2 font-size-15">LOW CARB</p>
                         </div>
-                        <div class="border-orange rounded m-2 ">
+                        <div class="border-orange bordeRounded m-2 ">
                             <p class="orange-text m-0 px-3 py-2 font-size-15">NON-VEGETARIAN</p>
                         </div>
-                        <div class="border-orange rounded m-2 ">
+                        <div class="border-orange bordeRounded m-2 ">
                             <p class="orange-text m-0 px-3 py-2 font-size-15">PLANT-BASED</p>
                         </div>
-                        <div class="border-orange rounded m-2 ">
+                        <div class="border-orange bordeRounded m-2 ">
                             <p class="orange-text m-0 px-3 py-2 font-size-15">PROTEIN RICH</p>
                         </div>
-                        <div class="border-orange rounded m-2 ">
+                        <div class="border-orange bordeRounded m-2 ">
                             <p class="orange-text m-0 px-3 py-2 font-size-15">VEGAN</p>
                         </div>
                     </div>
@@ -234,7 +234,7 @@
                        <div class="overlay">
                         <div class="d-flex pt-4 justify-content-between">
                             <div class="white-circle ml-lg-4 ml-1 d-flex justify-content-center align-items-center">
-                                <img width="50%" src="./assets/images/noun_Favorite_1481179.png" alt="favorite">
+                                <img width="50%" src="./assets/images/fill-heart.png" alt="favorite">
                             </div>
                             <div class="d-flex ">
                                 <div class="delivery-bg py-1 px-2 d-flex justify-content-center align-items-center">
@@ -322,7 +322,7 @@
                 </div>
                 <!-- second-card -->
                 <div class="bg-transparent mt-5 w-100 card-bg d-flex flex-column flex-lg-row ">
-                    <div class="card-bgImg1 w-100 w-lg-50">
+                    <div class="card-bgImg2 w-100 w-lg-50">
                        <div class="overlay">
                         <div class="d-flex pt-4 justify-content-between">
                             <div class="white-circle ml-lg-4 ml-1 d-flex justify-content-center align-items-center">
@@ -410,7 +410,7 @@
                 <!-- third-card -->
 
                 <div class="bg-transparent mt-5 w-100 card-bg d-flex flex-column flex-lg-row ">
-                    <div class="card-bgImg1 w-100 w-lg-50">
+                    <div class="card-bgImg3 w-100 w-lg-50">
                        <div class="overlay">
                         <div class="d-flex pt-4 justify-content-between">
                             <div class="white-circle ml-lg-4 ml-1 d-flex justify-content-center align-items-center">
@@ -499,7 +499,7 @@
                 <!-- 4th-card -->
 
                 <div class="bg-transparent mt-5 w-100 card-bg d-flex flex-column flex-lg-row ">
-                    <div class="card-bgImg1 w-100 w-lg-50">
+                    <div class="card-bgImg4 w-100 w-lg-50">
                        <div class="overlay">
                         <div class="d-flex pt-4 justify-content-between">
                             <div class="white-circle ml-lg-4 ml-1 d-flex justify-content-center align-items-center">
@@ -588,7 +588,7 @@
                 <!-- 5th-card -->
 
                 <div class="bg-transparent mt-5 w-100 card-bg d-flex flex-column flex-lg-row ">
-                    <div class="card-bgImg1 w-100 w-lg-50">
+                    <div class="card-bgImg5 w-100 w-lg-50">
                        <div class="overlay">
                         <div class="d-flex pt-4 justify-content-between">
                             <div class="white-circle ml-lg-4 ml-1 d-flex justify-content-center align-items-center">
@@ -677,7 +677,7 @@
                 <!-- 6th-card -->
 
                 <div class="bg-transparent mt-5 w-100 card-bg d-flex flex-column flex-lg-row ">
-                    <div class="card-bgImg1 w-100 w-lg-50">
+                    <div class="card-bgImg6 w-100 w-lg-50">
                        <div class="overlay">
                         <div class="d-flex pt-4 justify-content-between">
                             <div class="white-circle ml-lg-4 ml-1 d-flex justify-content-center align-items-center">
@@ -766,7 +766,7 @@
                 <!-- 7th-card -->
 
                 <div class="bg-transparent mt-5 w-100 card-bg d-flex flex-column flex-lg-row ">
-                    <div class="card-bgImg1 w-100 w-lg-50">
+                    <div class="card-bgImg7 w-100 w-lg-50">
                        <div class="overlay">
                         <div class="d-flex pt-4 justify-content-between">
                             <div class="white-circle ml-lg-4 ml-1 d-flex justify-content-center align-items-center">
@@ -855,7 +855,7 @@
                 <!-- 8th-card -->
 
                 <div class="bg-transparent mt-5 w-100 card-bg d-flex flex-column flex-lg-row ">
-                    <div class="card-bgImg1 w-100 w-lg-50">
+                    <div class="card-bgImg8 w-100 w-lg-50">
                        <div class="overlay">
                         <div class="d-flex pt-4 justify-content-between">
                             <div class="white-circle ml-lg-4 ml-1 d-flex justify-content-center align-items-center">
@@ -1031,10 +1031,10 @@
                             <p class="m-0 ml-2 text-white">customercare@caterbell.com</p>
                         </div>
                         <div class="d-flex mt-3 justify-content-center justify-content-lg-start align-items-center">
-                        <i class="orange-text font-size-20 fa fa-facebook"> </i>
-                        <i class="orange-text font-size-20 fa fa-twitter ml-2"> </i>
-                        <i class="orange-text font-size-20 fa fa-instagram ml-2"> </i>
-                        <i class="orange-text font-size-20 fa fa-youtube-play ml-2"> </i>
+                        <img src="./assets/images/fb.png" alt="facebook"> 
+                        <img class="ml-2" src="./assets/images/twitter.png" alt="twitter">
+                        <img class="ml-2" src="./assets/images/instagram.png" alt="instagram">
+                        <img class="ml-2" src="./assets/images/youtube.png" alt="youtubr">
                         </div>
                     </div>
                 </div>
