hero-img updated

--- a/index.html
+++ b/index.html
@@ -16,102 +16,109 @@
 </head>
 
 <body>
-    <div>
+    <div class="position-relative">
         <!-- header-section -->
-        <div class="header-bg">
-            <div class="header-main header-bg-black">
-                <!-- mobile responsive -->
-                <div class="d-block d-md-none d-flex justify-content-center pt-4">
-                    <div class="contact-bg py-2 d-flex">
-                        <div class="d-flex align-items-center">
-                            <div class="ml-3">
-                                <img src="./assets/images/noun-delivery-1293571.png">
-                            </div>
-                            <p class="m-0 text-white ml-2 font-size-15">314 651 0814</p>
-                        </div>
-                        <div class="d-flex align-items-center ml-4">
-                            <div>
-                                <img src="./assets/images/mail-svgrepo-com.png">
-                            </div>
-                            <p class="m-0 text-white ml-2 font-size-15">sales@caterbell.com</p>
-                        </div>
-                    </div>
-                </div>
-                <div
-                    class="d-flex position-relative justify-content-between justify-content-lg-center align-items-center px-4 py-3">
-                    <div>
-                        <img class="logo" src="./assets/images/Mask Group 37.png" alt="logo">
-                    </div>
-
-                    <div class="m-0 ml-lg-5">
-                        <div class="d-none d-md-block">
-                            <div class="contact-bg py-2 d-flex">
-                                <div class="d-flex align-items-center">
-                                    <div class="ml-3">
-                                        <i class="orange-text font-size-20 fa fa-whatsapp"> </i>
-                                    </div>
-                                    <p class="m-0 text-white ml-2 font-size-15">314 651 0814</p>
-                                </div>
-                                <div class="d-flex align-items-center ml-4">
-                                    <div>
-                                        <img src="./assets/images/mail-svgrepo-com.png">
-                                    </div>
-                                    <p class="m-0 text-white ml-2 font-size-15">sales@caterbell.com</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="d-flex">
-                            <div class="d-none d-md-block">
-                                <nav class="navbar">
-                                    <ul class="nav text-white">
-                                        <li><a class="text-white font-size-15" href="#">Home</a></li>
-                                        <li><a class="text-white ml-lg-4 ml-md-2 font-size-15" href="#">About</a></li>
-                                        <li><a class="text-white ml-lg-4 ml-md-2 font-size-15" href="#">Why Us?</a></li>
-                                        <li><a class="text-white ml-lg-4 ml-md-2 font-size-15" href="#">On-Time
-                                                Delivery</a></li>
-                                        <li><a class="text-white ml-lg-4 ml-md-2 font-size-15" href="#">Individual Meals
-                                                or Buffets</a></li>
-                                        <li><a class="text-white ml-lg-4 ml-md-2 font-size-15" href="#">Review</a></li>
-                                    </ul>
-                                </nav>
-                            </div>
-
-                            <div class="d-flex align-items-center m-0 ml-lg-5">
-                                <div>
-                                    <button class="signup-btn ml-2 hover font-size-15"><a href="#">Signup</a> </button>
-                                </div>
+        <div class="header-grand">
+            <div class="header-bg">
+                <div class="header-main position-absolute header-bg-black">
+                    <!-- mobile responsive -->
+                    <div class="d-block d-md-none d-flex justify-content-center pt-4">
+                        <div class="contact-bg py-2 d-flex">
+                            <div class="d-flex align-items-center">
                                 <div class="ml-3">
-                                    <button class="bg-orange login-btn py-1 px-3 font-size-15"><a
-                                            href="#">Login</a></button>
+                                    <img src="./assets/images/noun-delivery-1293571.png">
                                 </div>
-                                <div class="ml-4">
-                                    <img width="25px" src="./assets/images/bank.png" alt="bank">
+                                <p class="m-0 text-white ml-2 font-size-15">314 651 0814</p>
+                            </div>
+                            <div class="d-flex align-items-center ml-4">
+                                <div>
+                                    <img src="./assets/images/mail-svgrepo-com.png">
                                 </div>
+                                <p class="m-0 text-white ml-2 font-size-15">sales@caterbell.com</p>
                             </div>
                         </div>
                     </div>
-                    <!-- hamburgur-section -->
-                    <div class="topnav ml-3 d-block d-md-none">
-                        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-                            <i class="fa fa-bars"></i>
-                        </a>
-                        <div class="position-absolute main-ham">
-                            <div class="nav-bar text-center" id="myLinks">
-                                <p>Home</p>
-                                <p>About</p>
-                                <p>Why Us?</p>
-                                <p>On Time Delivery</p>
-                                <p>Individual Meals or Buffets</p>
-                                <p>Review</p>
-                            </div>
+                    <div
+                        class="d-flex position-relative justify-content-between justify-content-lg-center align-items-center px-4 py-3">
+                        <div>
+                            <img class="logo" src="./assets/images/Mask Group 37.png" alt="logo">
                         </div>
 
+                        <div class="m-0 ml-lg-5">
+                            <div class="d-none d-md-block">
+                                <div class="contact-bg py-2 d-flex">
+                                    <div class="d-flex align-items-center">
+                                        <div class="ml-3">
+                                            <i class="orange-text font-size-20 fa fa-whatsapp"> </i>
+                                        </div>
+                                        <p class="m-0 text-white ml-2 font-size-15">314 651 0814</p>
+                                    </div>
+                                    <div class="d-flex align-items-center ml-4">
+                                        <div>
+                                            <img src="./assets/images/mail-svgrepo-com.png">
+                                        </div>
+                                        <p class="m-0 text-white ml-2 font-size-15">sales@caterbell.com</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="d-flex">
+                                <div class="d-none d-md-block">
+                                    <nav class="navbar">
+                                        <ul class="nav text-white">
+                                            <li><a class="text-white font-size-15" href="#">Home</a></li>
+                                            <li><a class="text-white ml-lg-4 ml-md-2 font-size-15" href="#">About</a>
+                                            </li>
+                                            <li><a class="text-white ml-lg-4 ml-md-2 font-size-15" href="#">Why Us?</a>
+                                            </li>
+                                            <li><a class="text-white ml-lg-4 ml-md-2 font-size-15" href="#">On-Time
+                                                    Delivery</a></li>
+                                            <li><a class="text-white ml-lg-4 ml-md-2 font-size-15" href="#">Individual
+                                                    Meals
+                                                    or Buffets</a></li>
+                                            <li><a class="text-white ml-lg-4 ml-md-2 font-size-15" href="#">Review</a>
+                                            </li>
+                                        </ul>
+                                    </nav>
+                                </div>
+
+                                <div class="d-flex align-items-center m-0 ml-lg-5">
+                                    <div>
+                                        <button class="signup-btn ml-2 hover font-size-15"><a href="#">Signup</a>
+                                        </button>
+                                    </div>
+                                    <div class="ml-3">
+                                        <button class="bg-orange login-btn py-1 px-3 font-size-15"><a
+                                                href="#">Login</a></button>
+                                    </div>
+                                    <div class="ml-4">
+                                        <img width="25px" src="./assets/images/bank.png" alt="bank">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- hamburgur-section -->
+                        <div class="topnav ml-3 d-block d-md-none">
+                            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                                <i class="fa fa-bars"></i>
+                            </a>
+                            <div class="position-absolute main-ham">
+                                <div class="nav-bar text-center" id="myLinks">
+                                    <p>Home</p>
+                                    <p>About</p>
+                                    <p>Why Us?</p>
+                                    <p>On Time Delivery</p>
+                                    <p>Individual Meals or Buffets</p>
+                                    <p>Review</p>
+                                </div>
+                            </div>
+
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="d-flex justify-content-center">
-                <p class="text-white font-size-20 text-center px-3 px-lg-0 font-weight-normal m-0 py-5">Delivering to 62
-                    Weldon Parkway, Maryland Heights, MO, USA on 23 Aug, 2022</p>
+                <div class="d-flex align-items-center h-100 justify-content-center">
+                    <p class="text-white font-size-20 text-center px-3 px-lg-0 font-weight-normal m-0">Delivering to 62
+                        Weldon Parkway, Maryland Heights, MO, USA on 23 Aug, 2022</p>
+                </div>
             </div>
         </div>
         <!-- search-section -->
@@ -978,7 +985,7 @@
         </div>
 
         <!-- footer-section -->
-        <footer class="d-md-flex d-lg-flex">
+        <footer class="d-md-flex d-lg-flex justify-content-center">
             <div class="d-flex flex-column flex-md-col justify-content-center text-center ml-5">
                 <div>
                     <img src="./assets/images/footer-logo.png" alt="logo">
